fixes left column css chevron visibility

--- a/includes/plugin.scss
+++ b/includes/plugin.scss
@@ -110,7 +110,7 @@ Individual contact listing within staff directory
 		width: 25%;
 
 		.list {
-			margin: 25px 0;
+			margin: 25px 0 25px 25px;
 
 			li {
 				border-bottom: solid 1px #f0f0f0;
